--- a/Application/StopWatch.csproj
+++ b/Application/StopWatch.csproj
@@ -57,6 +57,8 @@
     <Compile Include="StopTimeParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StopTime.cs" />
+    <Compile Include="Timetable.cs" />
+    <Compile Include="Weekday.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="1310137.html" />
