Improved tests to validate the return value of StopTimes#GetNextStops. Fixed the "negative seconds" bug in that method. Added settings to testing project.

--- a/Testing/StopWatchTester.csproj
+++ b/Testing/StopWatchTester.csproj
@@ -36,6 +36,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="StopTimesParserTester.cs" />
     <Compile Include="StopTimesTester.cs" />
   </ItemGroup>
@@ -44,6 +50,13 @@
       <Project>{2DCBCC12-1B62-4CEC-B8AD-7D5DC7E5AC38}</Project>
       <Name>StopWatch</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="1310137.html" />
