--- a/Application/Properties/Settings.settings
+++ b/Application/Properties/Settings.settings
@@ -5,11 +5,8 @@
     <Setting Name="ExcludedBuses" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="TimetableDir" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">..\..\</Value>
-    </Setting>
     <Setting Name="TimetableFile" Type="System.String" Scope="User">
-      <Value Profile="(Default)">1310137.html</Value>
+      <Value Profile="(Default)">..\..\1310137.html</Value>
     </Setting>
   </Settings>
 </SettingsFile>
