--- a/Application/app.config
+++ b/Application/app.config
@@ -1,24 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="StopWatch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="StopWatch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <applicationSettings>
-        <StopWatch.Properties.Settings>
-            <setting name="TimetableDir" serializeAs="String">
-                <value>..\..\</value>
-            </setting>
-        </StopWatch.Properties.Settings>
-    </applicationSettings>
     <userSettings>
         <StopWatch.Properties.Settings>
             <setting name="TimetableFile" serializeAs="String">
-                <value>1310137.html</value>
+                <value>..\..\1310137.html</value>
             </setting>
         </StopWatch.Properties.Settings>
     </userSettings>
