StopWatch.cs setting ExcludedBuses default value is now a single empty string.

--- a/Application/app.config
+++ b/Application/app.config
@@ -7,6 +7,14 @@
     </configSections>
     <userSettings>
         <StopWatch.Properties.Settings>
+            <setting name="ExcludedBuses" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
             <setting name="TimetableFile" serializeAs="String">
                 <value>..\..\1310137.html</value>
             </setting>
