Stop time delay can be given with the command line switch -d. The default is now 0. Also fixed the time difference shown when the delay is not zero.

--- a/Application/app.config
+++ b/Application/app.config
@@ -18,6 +18,9 @@
             <setting name="TimetableFile" serializeAs="String">
                 <value>..\..\1310137.html</value>
             </setting>
+            <setting name="StopTimeDelay" serializeAs="String">
+                <value>0</value>
+            </setting>
         </StopWatch.Properties.Settings>
     </userSettings>
 </configuration>
