--- a/Application/Properties/Settings.settings
+++ b/Application/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="TimetableFile" Type="System.String" Scope="User">
       <Value Profile="(Default)">..\..\1310137.html</Value>
     </Setting>
+    <Setting Name="StopTimeDelay" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
