Stop time count can be given with the command line switch -c. The default is 5.

--- a/Application/app.config
+++ b/Application/app.config
@@ -21,6 +21,9 @@
             <setting name="StopTimeDelay" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="StopTimeCount" serializeAs="String">
+                <value>5</value>
+            </setting>
         </StopWatch.Properties.Settings>
     </userSettings>
 </configuration>
