--- a/Application/Properties/Settings.settings
+++ b/Application/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="StopTimeDelay" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="StopTimeCount" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
