Removed timetable files from projects after moving the repository. Updated paths so that NUnit can run the tests correctly, although the paths make no sense.

--- a/Testing/app.config
+++ b/Testing/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <StopWatchTester.Properties.Settings>
             <setting name="TimetableDir" serializeAs="String">
-                <value>..\..\Timetables\</value>
+                <value>C#\StopWatch\Testing\Timetables\</value>
             </setting>
         </StopWatchTester.Properties.Settings>
     </applicationSettings>
