When returning next stops, stops from following days can now be returned too. Also added an executable tester to debug problems found in tests. This caused renaming of existing Testing directory to TestingNUnit.

--- a/TestingNUnit/Properties/Settings.settings
+++ b/TestingNUnit/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="TimetableDir" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C#\StopWatch\Testing\Timetables\</Value>
+      <Value Profile="(Default)">E:\Projects\C#\StopWatch\TestingNUnit\Timetables\</Value>
     </Setting>
   </Settings>
 </SettingsFile>
