--- a/TestingNUnit/app.config
+++ b/TestingNUnit/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <StopWatchTester.Properties.Settings>
             <setting name="TimetableDir" serializeAs="String">
-                <value>C#\StopWatch\Testing\Timetables\</value>
+                <value>E:\Projects\C#\StopWatch\TestingNUnit\Timetables\</value>
             </setting>
         </StopWatchTester.Properties.Settings>
     </applicationSettings>
