Naming updates. Tester classes use their own namespaces. Renamed remaining occurences of StopWatchTester to StopWatchNUnitTester.

--- a/TestingNUnit/app.config
+++ b/TestingNUnit/app.config
@@ -2,14 +2,14 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="StopWatchTester.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="StopWatchNUnitTester.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <applicationSettings>
-        <StopWatchTester.Properties.Settings>
+        <StopWatchNUnitTester.Properties.Settings>
             <setting name="TimetableDir" serializeAs="String">
                 <value>E:\Projects\C#\StopWatch\TestingNUnit\Timetables\</value>
             </setting>
-        </StopWatchTester.Properties.Settings>
+        </StopWatchNUnitTester.Properties.Settings>
     </applicationSettings>
 </configuration>
