--- a/Application/app.config
+++ b/Application/app.config
@@ -24,6 +24,9 @@
             <setting name="StopTimeCount" serializeAs="String">
                 <value>8</value>
             </setting>
+            <setting name="TimetableDir" serializeAs="String">
+                <value>.\</value>
+            </setting>
         </StopWatch.Properties.Settings>
     </userSettings>
 </configuration>
