--- a/Application/StopWatch.csproj
+++ b/Application/StopWatch.csproj
@@ -65,12 +65,22 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StopTime.cs" />
     <Compile Include="Timetable.cs" />
+    <Compile Include="WebFileChooser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WebFileChooser.Designer.cs">
+      <DependentUpon>WebFileChooser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Weekday.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainWindow.resx">
       <SubType>Designer</SubType>
       <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WebFileChooser.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>WebFileChooser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
