--- a/Application/Properties/Settings.settings
+++ b/Application/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="TimetableDir" Type="System.String" Scope="User">
       <Value Profile="(Default)">.\</Value>
     </Setting>
+    <Setting Name="WebAutoComplete" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
