--- a/Application/app.config
+++ b/Application/app.config
@@ -16,7 +16,7 @@
                 </value>
             </setting>
             <setting name="TimetableFile" serializeAs="String">
-                <value>..\..\1310137.html</value>
+                <value>1310137.html</value>
             </setting>
             <setting name="StopTimeDelay" serializeAs="String">
                 <value>0</value>
